--- a/reservas/reserva.html
+++ b/reservas/reserva.html
@@ -116,7 +116,9 @@
                 <li>Se solicita reservar a partir de los 7 años.</li>
                 <li>Cancelación o modificación hasta 24hs antes.</li>
             </ul>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2406.474972287446!2d-64.18898269730093!3d-31.46177067431257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a351f8ac05c7%3A0xccbd44eb6969c8da!2sAntonia%20Vinos%20con%20Historia!5e0!3m2!1ses-419!2sar!4v1724362947764!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        
     </div>
 </body>
 </html>
