--- a/Html/Español html/LaRural.html
+++ b/Html/Español html/LaRural.html
@@ -138,7 +138,7 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </center>
-        <center><a href="https://forms.gle/XxYkeJWxsAZt3SNi9" target="_blank" class="button">Reservar</a></center>
+        <center><a href="/reservas/reserva.html" target="_blank" class="button">Reservar</a></center>
   </main>
 
 
